changed a few things, done some TODOs left behind, cleared up the ambigouity logic